cleaned up and set boundaries
